# kvpaxos

./: .gitmodules  CMakeLists.txt  README.md  compile.sh
cmake/: add_libkahip.cmake  add_libmetis.cmake  add_libpaxos.cmake  libkahip_install_header.cmake  project_options.cmake
src/: CMakeLists.txt  client.cpp  main.cpp  replica.cpp
src/compresser/: CMakeLists.txt  compresser.cpp  compresser.h
src/constants/: CMakeLists.txt  constants.h
src/evclient/: CMakeLists.txt  evclient.cpp  evclient.h
src/graph/: CMakeLists.txt  graph.hpp  partitioning.cpp  partitioning.h
src/request/: CMakeLists.txt  random.cpp  random.h  request.cpp  request.hpp  request_generation.cpp  request_generation.h
src/scheduler/: CMakeLists.txt  partition.cpp  partition.hpp  pattern_tracker.cpp  pattern_tracker.hpp  scheduler.hpp
src/storage/: CMakeLists.txt  storage.cpp  storage.h
src/types/: CMakeLists.txt  types.h  types.hpp
